# SPDX-FileCopyrightText: 2022 - 2023 Peter Urban, Ghent University
# SPDX-FileCopyrightText: 2019 - 2022 Daniil Goncharov
#
# SPDX-License-Identifier: MIT

project(
    'flat_map', ['cpp'],
    default_options: ['cpp_std=c++20'],
    version: '0.1.0',
)

flat_map_include = include_directories('.')

flat_map_dep = declare_dependency(
    include_directories: flat_map_include,
)

# list and install headers
headers = [
    ]

#install_headers(headers, preserve_path: false)
