# SPDX-FileCopyrightText: 2022 Peter Urban, Ghent University
#
# SPDX-License-Identifier: MIT

# list and install headers
headers = [
    'bitsery/adapter/buffer.h',
    'bitsery/adapter/measure_size.h',
    'bitsery/adapter/stream.h',
    'bitsery/bitsery.h',
    'bitsery/brief_syntax.h',
    'bitsery/brief_syntax/array.h',
    'bitsery/brief_syntax/atomic.h',
    'bitsery/brief_syntax/chrono.h',
    'bitsery/brief_syntax/deque.h',
    'bitsery/brief_syntax/forward_list.h',
    'bitsery/brief_syntax/list.h',
    'bitsery/brief_syntax/map.h',
    'bitsery/brief_syntax/memory.h',
    'bitsery/brief_syntax/queue.h',
    'bitsery/brief_syntax/set.h',
    'bitsery/brief_syntax/stack.h',
    'bitsery/brief_syntax/string.h',
    'bitsery/brief_syntax/tuple.h',
    'bitsery/brief_syntax/unordered_map.h',
    'bitsery/brief_syntax/unordered_set.h',
    'bitsery/brief_syntax/variant.h',
    'bitsery/brief_syntax/vector.h',
    'bitsery/common.h',
    'bitsery/deserializer.h',
    'bitsery/details/adapter_common.h',
    'bitsery/details/brief_syntax_common.h',
    'bitsery/details/not_defined_type.h',
    'bitsery/details/serialization_common.h',
    'bitsery/ext/compact_value.h',
    'bitsery/ext/entropy.h',
    'bitsery/ext/growable.h',
    'bitsery/ext/inheritance.h',
    'bitsery/ext/pointer.h',
    'bitsery/ext/std_atomic.h',
    'bitsery/ext/std_bitset.h',
    'bitsery/ext/std_chrono.h',
    'bitsery/ext/std_map.h',
    'bitsery/ext/std_optional.h',
    'bitsery/ext/std_queue.h',
    'bitsery/ext/std_set.h',
    'bitsery/ext/std_smart_ptr.h',
    'bitsery/ext/std_stack.h',
    'bitsery/ext/std_tuple.h',
    'bitsery/ext/std_variant.h',
    'bitsery/ext/utils/composite_type_overloads.h',
    'bitsery/ext/utils/memory_resource.h',
    'bitsery/ext/utils/pointer_utils.h',
    'bitsery/ext/utils/polymorphism_utils.h',
    'bitsery/ext/utils/rtti_utils.h',
    'bitsery/ext/value_range.h',
    'bitsery/serializer.h',
    'bitsery/traits/array.h',
    'bitsery/traits/core/std_defaults.h',
    'bitsery/traits/core/traits.h',
    'bitsery/traits/deque.h',
    'bitsery/traits/forward_list.h',
    'bitsery/traits/list.h',
    'bitsery/traits/string.h',
    'bitsery/traits/vector.h',
]

#install_headers(headers, preserve_path: true)
