# SPDX-FileCopyrightText: 2022 Peter Urban, Ghent University
#
# SPDX-License-Identifier: MIT

# list and install headers
headers = [
    'indicators/details/stream_helper.hpp',
    'indicators/block_progress_bar.hpp'.
    'indicators/cursor_control.hpp',
    'indicators/dynamic_progress.hpp',
    'indicators/indeterminate_progress_bar.hpp',
    'indicators/progress_bar.hpp',
    'indicators/progress_type.hpp',
    'indicators/termcolor.hpp',
    'indicators/color.hpp',
    'indicators/cursor_movement.hpp',
    'indicators/display_width.hpp',
    'indicators/font_style.hpp',
    'indicators/multi_progress.hpp',
    'indicators/progress_spinner.hpp',
    'indicators/setting.hpp',
    'indicators/terminal_size.hpp'
]

#install_headers(headers, preserve_path: true)
