# SPDX-FileCopyrightText: 2022 - 2023 Peter Urban, Ghent University
#
# SPDX-License-Identifier: MIT

# list and install headers
headers = [
  'pyarray.hpp',
  'pyarray_backstrides.hpp',
  'pycontainer.hpp',
  'pynative_casters.hpp',
  'pystrides_adaptor.hpp',
  'pytensor.hpp',
  'pyvectorize.hpp',
  'xtensor_python_config.hpp',
  'xtensor_type_caster_base.hpp'
]

#install_headers(headers, preserve_path: true)
